--- a/Lyyneheym/YuriPlatform/YuriPlatform.csproj
+++ b/Lyyneheym/YuriPlatform/YuriPlatform.csproj
@@ -109,6 +109,8 @@
     <Compile Include="PlatformCore\Graphic3D\ModelDescriptor3D.cs" />
     <Compile Include="PlatformCore\Net\YuriFtpClient.cs" />
     <Compile Include="PlatformCore\Net\YuriHttpClient.cs" />
+    <Compile Include="PlatformCore\Router\IRouteable.cs" />
+    <Compile Include="PlatformCore\Router\YuriRoutedEvent.cs" />
     <Compile Include="PlatformCore\Semaphore\SemaphoreDispatcher.cs" />
     <Compile Include="PlatformCore\Semaphore\SemaphoreHandler.cs" />
     <Compile Include="PlatformCore\Semaphore\YuriObservable.cs" />
