--- a/Lyyneheym/YuriPlatform/YuriPlatform.csproj
+++ b/Lyyneheym/YuriPlatform/YuriPlatform.csproj
@@ -100,6 +100,7 @@
     <Compile Include="PageView\SplashPage.xaml.cs">
       <DependentUpon>SplashPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PlatformCore\Audio\MusicianThreadHandler.cs" />
     <Compile Include="PlatformCore\Audio\NAudioChannelPlayer.cs" />
     <Compile Include="PlatformCore\Director.cs" />
     <Compile Include="PlatformCore\Evaluator\IEvaluator.cs" />
@@ -109,6 +110,8 @@
     <Compile Include="PlatformCore\Graphic3D\ModelDescriptor3D.cs" />
     <Compile Include="PlatformCore\Net\YuriFtpClient.cs" />
     <Compile Include="PlatformCore\Net\YuriHttpClient.cs" />
+    <Compile Include="PlatformCore\Router\RouterManager.cs" />
+    <Compile Include="PlatformCore\Router\YuriRouter.cs" />
     <Compile Include="PlatformCore\Router\IRouteable.cs" />
     <Compile Include="PlatformCore\Router\YuriRoutedEvent.cs" />
     <Compile Include="PlatformCore\Semaphore\SemaphoreDispatcher.cs" />
