--- a/Lyyneheym/YuriPlatform/YuriPlatform.csproj
+++ b/Lyyneheym/YuriPlatform/YuriPlatform.csproj
@@ -45,6 +45,10 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <Reference Include="Bass.Net, Version=2.4.11.1, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\Bass.Net.dll</HintPath>
+    </Reference>
     <Reference Include="IronPython, Version=2.7.7.0, Culture=neutral, PublicKeyToken=7f709c5b713576e1, processorArchitecture=MSIL">
       <HintPath>..\packages\IronPython.2.7.7\lib\Net40\IronPython.dll</HintPath>
     </Reference>
@@ -104,6 +108,7 @@
     <Compile Include="PageView\SplashPage.xaml.cs">
       <DependentUpon>SplashPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PlatformCore\Audio\MusicianBass.cs" />
     <Compile Include="PlatformCore\Audio\MusicianDescriptor.cs" />
     <Compile Include="PlatformCore\Audio\MusicianRouterHandler.cs" />
     <Compile Include="PlatformCore\Audio\NAudioChannelPlayer.cs" />
